--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <main>
     </main>
     <script src="sketch.js"></script>
-     <script src="p5.collide2d.js"></script>
+    <script src="imagens.js"></script>
+    <script src="carro.js"></script>
+    <script src="ator.js"></script>
   </body>
 </html>
